--- a/_posts/2017-03-15-get-noticed-2017.md
+++ b/_posts/2017-03-15-get-noticed-2017.md
@@ -8,9 +8,9 @@ author_url : /author/kamila
 author_avatar: kamila
 show_avatar : true
 read_time : 15
-feature_image: feature-fire
+feature_image: feature-laptop
 show_related_posts: true
-square_related: recommend-fire
+square_related: recommend-laptop
 ---
 ## ..Ds - what?
 You might be wondering what the heck is this Dsp2017 in the categories' section and what actually am I doing here, starting yet another programming blog with little experience in front-end development. Well, what got me going with all this stuff is a competition opened by [Maciej Aniserowicz](http://devstyle.pl/o-mnie/), founder of [Devstyle](http://devstyle.pl) blog, one of the best of the kind in Poland. "Dsp" is a Polish acronym for "Get Noticed" and this is exactly the name of the competition. It is targeted at literally all programmers, no matter how experienced they are. Anyone can join, work on their own project, blog about it, share their knowledge and learn at the same time.
